--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@mantine/form": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
     "@prisma/client": "^5.11.0",
+    "@tabler/icons-react": "^3.1.0",
     "next": "14.1.3",
+    "object-hash": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/object-hash": "^3.0.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
