--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@hello-pangea/dnd": "^16.5.0",
     "@mantine/core": "^7.6.2",
+    "@mantine/dates": "^7.6.2",
     "@mantine/form": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
+    "@mantine/modals": "^7.6.2",
+    "@mantine/notifications": "^7.6.2",
     "@prisma/client": "^5.11.0",
     "@tabler/icons-react": "^3.1.0",
+    "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
+    "mantine-datatable": "^7.6.1",
+    "mantine-form-zod-resolver": "^1.1.0",
+    "nanoid": "^5.0.6",
     "next": "14.1.3",
     "object-hash": "^3.0.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
-    "uuid": "^9.0.1"
+    "react-imask": "^7.5.0",
+    "react-use": "^17.5.0",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,6 +41,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
+    "@types/validator": "^13.11.9",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
