--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
     "@mantine/modals": "^7.6.2",
     "@mantine/notifications": "^7.6.2",
     "@prisma/client": "^5.11.0",
+    "@react-pdf/renderer": "^3.4.0",
     "@tabler/icons-react": "^3.1.0",
+    "chart.js": "^4.4.2",
+    "chartjs-to-image": "^1.2.2",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "mantine-datatable": "^7.6.1",
     "mantine-form-zod-resolver": "^1.1.0",
     "nanoid": "^5.0.6",
@@ -28,9 +34,11 @@
     "object-hash": "^3.0.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18",
     "react-imask": "^7.5.0",
     "react-use": "^17.5.0",
+    "recharts": "^2.12.3",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "zod": "^3.22.4"
@@ -39,6 +47,7 @@
     "@types/node": "^20",
     "@types/object-hash": "^3.0.6",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.9",
