--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -45,6 +48,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20",
     "@types/object-hash": "^3.0.6",
     "@types/react": "^18",
@@ -52,12 +57,18 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.9",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "^9.1.0",
+    "jsdom": "^24.0.0",
+    "next-router-mock": "^0.9.12",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.2.5",
     "prisma": "^5.11.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.4.0"
   }
 }
